// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/[locale]/layout.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__layout_f_476 from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_476";
import type { Metadata } from "next";
import { Geist, Geist_Mono } from "next/font/google";
import "../globals.css";


const geistSans = Geist({
  variable: "--font-geist-sans",
  subsets: ["latin"],
});

const geistMono = Geist_Mono({
  variable: "--font-geist-mono",
  subsets: ["latin"],
});

export const generateMetadata = async ({ params }: LayoutProps<"/[locale]">): Promise<Metadata> => {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__layout_f_476"]: _zintl_mgr_b_src_app__locale__layout_f_476.loader } }));

  return {
    title: _t("Create Next App {locale}", { locale: locale }, { _mgr: _zintl_mgr_b_src_app__locale__layout_f_476, _bId: "b_src_app__locale__layout_f_476" }),
    description: _t("Generated by create next app", { _mgr: _zintl_mgr_b_src_app__locale__layout_f_476, _bId: "b_src_app__locale__layout_f_476" }),
  };
};

export default async function RootLayout({ children, params }: LayoutProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__layout_f_476"]: _zintl_mgr_b_src_app__locale__layout_f_476.loader } }));
  return (
    <html
      lang={locale}
      dir="ltr"
      className={\`\${geistSans.variable} \${geistMono.variable} h-full antialiased\`}
    >
      <body className="min-h-full flex flex-col">{children}</body>
    </html>
  );
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/app/[locale]/layout");
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/src/app/[locale]/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_src_app__locale__page_Home from "virtual:zintl/manager/none/entry:b_src_app__locale__page_Home";
import _zintl_mgr_b_src_app__locale__layout_f_476 from "virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_476";
import Image from "next/image";


export default async function Home({ params }: PageProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_src_app__locale__layout_f_476"]: _zintl_mgr_b_src_app__locale__layout_f_476.loader, ["b_src_app__locale__page_Home"]: _zintl_mgr_b_src_app__locale__page_Home.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black">
      <main className="flex flex-1 w-full max-w-3xl flex-col items-center justify-between py-32 px-16 bg-white dark:bg-black sm:items-start">
        <div className="w-full">{_t(":", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}{locale}
          <div className="w-full flex flex-row items-baseline gap-2.5 flex-wrap">
            <Image
              className="dark:invert"
              src="/next.svg"
              alt={_t("Next.js logo", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}
              width={100}
              height={20}
              priority
            />
            <span>{_t("x", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</span>
            <span className="font-bold text-2xl">{_t("Zintl(i18n)", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</span>
          </div>
        </div>
        <div className="flex flex-col items-center gap-6 text-center sm:items-start sm:text-left">
          <h1 className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-black dark:text-zinc-50">{_t("To get started, edit the page.tsx file.", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</h1>
          <p className="max-w-md text-lg leading-8 text-zinc-600 dark:text-zinc-400">{<span dangerouslySetInnerHTML={{ __html: _t("Looking for a starting point or more instructions? Head over to{input} <a1> Templates </a1>{input2} or the{input3} <a2> Learning </a2>{input4} center.", { input: " ", input2: " ", input3: " ", input4: " " }, { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home", _tags: [{ alias: "a1", originalOpen: \`<a
              href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }, { alias: "a2", originalOpen: \`<a
              href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }] }) }} />}</p>
        </div>
        <div className="flex flex-col gap-4 text-base font-medium sm:flex-row">
          <a
            className="flex h-12 w-full items-center justify-center gap-2 rounded-full bg-foreground px-5 text-background transition-colors hover:bg-[#383838] dark:hover:bg-[#ccc] md:w-[158px]"
            href="https://vercel.com/new?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{<span dangerouslySetInnerHTML={{ __html: _t("<image/> Deploy Now", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home", _tags: [{ alias: "image", originalOpen: \`<Image
              class="dark:invert"
              src="/vercel.svg"
              alt="Vercel logomark"
              width="\${16}"
              height="\${16}"
            />\`, tagName: "image" }] }) }} />}</a>
          <a
            className="flex h-12 w-full items-center justify-center rounded-full border border-solid border-black/[.08] px-5 transition-colors hover:border-transparent hover:bg-black/[.04] dark:border-white/[.145] dark:hover:bg-[#1a1a1a] md:w-[158px]"
            href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{_t("Documentationn", { _mgr: _zintl_mgr_b_src_app__locale__page_Home, _bId: "b_src_app__locale__page_Home" })}</a>
        </div>
      </main>
    </div>
  );
}


if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    console.debug("[Zintl] HMR update accepted for: src/app/[locale]/page");
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "Generated by create next app": "تم إنشاؤه بواسطة create next app",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/ar/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      ":": ":",
      "Next.js logo": "شعار Next.js",
      "x": "x",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "للبدء، قم بتحرير ملف page.tsx.",
      "Looking for a starting point or more instructions? Head over to{input} <a1> Templates </a1>{input2} or the{input3} <a2> Learning </a2>{input4} center.": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`هل تبحث عن نقطة بداية أو المزيد من التعليمات؟ توجه إلى \${params['input']}  \${params['input2']} أو مركز \${params['input3']}  \${params['input4']}.\`;
  },
      "<image/> Deploy Now": "<image/> انشر الآن",
      "Vercel logomark": "شعار Vercel",
      "Documentationn": "التوثيق",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["ar"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "Generated by create next app": "Generado por create next app",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/es/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      ":": ":",
      "Next.js logo": "Logo de Next.js",
      "x": "x",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "Para comenzar, edite el archivo page.tsx.",
      "Looking for a starting point or more instructions? Head over to{input} <a1> Templates </a1>{input2} or the{input3} <a2> Learning </a2>{input4} center.": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`¿Buscas un punto de partida o más instrucciones? Dirígete a \${params['input']}  \${params['input2']} o al centro de \${params['input3']}  \${params['input4']}.\`;
  },
      "<image/> Deploy Now": "<image/> Desplegar ahora",
      "Vercel logomark": "Logomarca de Vercel",
      "Documentationn": "Documentación",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["es"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_476 1`] = `
"const catalog = {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "Generated by create next app": "由 create next app 生成",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/content/zh/entry:b_src_app__locale__page_Home 1`] = `
"const catalog = {
    "b_src_app__locale__page_Home": {
      ":": ":",
      "Next.js logo": "Next.js 标志",
      "x": "x",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "要开始使用，请编辑 page.tsx 文件。",
      "Looking for a starting point or more instructions? Head over to{input} <a1> Templates </a1>{input2} or the{input3} <a2> Learning </a2>{input4} center.": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`寻找起点或更多说明？前往 \${params['input']}  \${params['input2']} 或 \${params['input3']}  \${params['input4']} 中心。\`;
  },
      "<image/> Deploy Now": "<image/> 立即部署",
      "Vercel logomark": "Vercel 品牌标识",
      "Documentationn": "文档",
    },
  };
if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
  globalThis.__zintl_active.addCatalogs({ ["zh"]: catalog });
}
export default catalog;
if (import.meta.hot) { import.meta.hot.accept(); }"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__layout_f_476 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__layout_f_476", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__layout_f_476": {
      "Create Next App {locale}": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "Generated by create next app": "Generated by create next app",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__layout_f_476").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/manager/none/entry:b_src_app__locale__page_Home 1`] = `
"export default (() => {
  const manager = { id: "b_src_app__locale__page_Home", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_src_app__locale__page_Home": {
      ":": ":",
      "Next.js logo": "Next.js logo",
      "x": "x",
      "Zintl(i18n)": "Zintl(i18n)",
      "To get started, edit the page.tsx file.": "To get started, edit the page.tsx file.",
      "Looking for a starting point or more instructions? Head over to{input} <a1> Templates </a1>{input2} or the{input3} <a2> Learning </a2>{input4} center.": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`Looking for a starting point or more instructions? Head over to\${params['input']} \${params['input2']} or the\${params['input3']} \${params['input4']} center.\`;
  },
      "<image/> Deploy Now": "<image/> Deploy Now",
      "Vercel logomark": "Vercel logomark",
      "Documentationn": "Documentationn",
    },
  };
                case "ar":
          return import(/* @vite-ignore */ "virtual:zintl/content/ar/entry:b_src_app__locale__page_Home").then(m => m.default);
        case "es":
          return import(/* @vite-ignore */ "virtual:zintl/content/es/entry:b_src_app__locale__page_Home").then(m => m.default);
        case "zh":
          return import(/* @vite-ignore */ "virtual:zintl/content/zh/entry:b_src_app__locale__page_Home").then(m => m.default);
        default: return {};
      }
    } };
  if (typeof globalThis !== "undefined" && globalThis.__zintl_active) {
    globalThis.__zintl_active.registerLoader(manager.id, manager.loader);
  }
  return manager;
})();
if (import.meta.hot) {
  import.meta.hot.accept((newModule) => {
    if (newModule?.default && typeof globalThis !== "undefined" && globalThis.__zintl_active) {
      globalThis.__zintl_active.registerLoader(newModule.default.id, newModule.default.loader);
    }
  });
}"
`;

exports[`Example Proof: vinext-basic > should match Development snapshots > vinext-basic/dev-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	let message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) if (mgr) {
		instance.registerLoader(mgr.id, mgr.loader);
		const boundaryCatalogAfter = targetBId ? instance.catalogs[locale]?.[targetBId] : void 0;
		message = boundaryCatalogAfter ? boundaryCatalogAfter[key] : void 0;
		if (message === void 0) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
	} else {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/[locale]/layout.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_daacf15fefd1 from "virtual:zintl/manager/none/entry:b_daacf15fefd1";
import type { Metadata } from "next";
import { Geist, Geist_Mono } from "next/font/google";
import "../globals.css";


const geistSans = Geist({
  variable: "--font-geist-sans",
  subsets: ["latin"],
});

const geistMono = Geist_Mono({
  variable: "--font-geist-mono",
  subsets: ["latin"],
});

export const generateMetadata = async ({ params }: LayoutProps<"/[locale]">): Promise<Metadata> => {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_daacf15fefd1"]: _zintl_mgr_b_daacf15fefd1.loader } }));

  return {
    title: _t("f26ebb92", { locale: locale }, { _mgr: _zintl_mgr_b_daacf15fefd1, _bId: "b_daacf15fefd1" }),
    description: _t("a2995064", { _mgr: _zintl_mgr_b_daacf15fefd1, _bId: "b_daacf15fefd1" }),
  };
};

export default async function RootLayout({ children, params }: LayoutProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_daacf15fefd1"]: _zintl_mgr_b_daacf15fefd1.loader } }));
  return (
    <html
      lang={locale}
      dir="ltr"
      className={\`\${geistSans.variable} \${geistMono.variable} h-full antialiased\`}
    >
      <body className="min-h-full flex flex-col">{children}</body>
    </html>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/src/app/[locale]/page.tsx 1`] = `
"import { _t, loadI18nInstance } from "virtual:zintl/runtime/internal";
import _zintl_mgr_b_a744357e6e46 from "virtual:zintl/manager/none/entry:b_a744357e6e46";
import _zintl_mgr_b_daacf15fefd1 from "virtual:zintl/manager/none/entry:b_daacf15fefd1";
import Image from "next/image";


export default async function Home({ params }: PageProps<"/[locale]">) {
  const { locale } = await params;
  await (globalThis.__zintl_inst = loadI18nInstance({ locale: locale, loaders: { ["b_daacf15fefd1"]: _zintl_mgr_b_daacf15fefd1.loader, ["b_a744357e6e46"]: _zintl_mgr_b_a744357e6e46.loader } }));

  return (
    <div className="flex flex-col flex-1 items-center justify-center bg-zinc-50 font-sans dark:bg-black">
      <main className="flex flex-1 w-full max-w-3xl flex-col items-center justify-between py-32 px-16 bg-white dark:bg-black sm:items-start">
        <div className="w-full">{_t("05a79f06", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}{locale}
          <div className="w-full flex flex-row items-baseline gap-2.5 flex-wrap">
            <Image
              className="dark:invert"
              src="/next.svg"
              alt={_t("6680ed51", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}
              width={100}
              height={20}
              priority
            />
            <span>{_t("11f6ad8e", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</span>
            <span className="font-bold text-2xl">{_t("f18b8fe7", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</span>
          </div>
        </div>
        <div className="flex flex-col items-center gap-6 text-center sm:items-start sm:text-left">
          <h1 className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-black dark:text-zinc-50">{_t("6a0fa24d", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</h1>
          <p className="max-w-md text-lg leading-8 text-zinc-600 dark:text-zinc-400">{<span dangerouslySetInnerHTML={{ __html: _t("ee848521", { input: " ", input2: " ", input3: " ", input4: " " }, { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46", _tags: [{ alias: "a1", originalOpen: \`<a
              href="https://vercel.com/templates?framework=next.js&utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }, { alias: "a2", originalOpen: \`<a
              href="https://nextjs.org/learn?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
              class="font-medium text-zinc-950 dark:text-zinc-50"
            >\`, tagName: "a" }] }) }} />}</p>
        </div>
        <div className="flex flex-col gap-4 text-base font-medium sm:flex-row">
          <a
            className="flex h-12 w-full items-center justify-center gap-2 rounded-full bg-foreground px-5 text-background transition-colors hover:bg-[#383838] dark:hover:bg-[#ccc] md:w-[158px]"
            href="https://vercel.com/new?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{<span dangerouslySetInnerHTML={{ __html: _t("b75c70e0", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46", _tags: [{ alias: "image", originalOpen: \`<Image
              class="dark:invert"
              src="/vercel.svg"
              alt="Vercel logomark"
              width="\${16}"
              height="\${16}"
            />\`, tagName: "image" }] }) }} />}</a>
          <a
            className="flex h-12 w-full items-center justify-center rounded-full border border-solid border-black/[.08] px-5 transition-colors hover:border-transparent hover:bg-black/[.04] dark:border-white/[.145] dark:hover:bg-[#1a1a1a] md:w-[158px]"
            href="https://nextjs.org/docs?utm_source=create-next-app&utm_medium=appdir-template-tw&utm_campaign=create-next-app"
            target="_blank"
            rel="noopener noreferrer"
          >{_t("215fd18f", { _mgr: _zintl_mgr_b_a744357e6e46, _bId: "b_a744357e6e46" })}</a>
        </div>
      </main>
    </div>
  );
}"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "05a79f06": ":",
      "6680ed51": "شعار Next.js",
      "11f6ad8e": "x",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "للبدء، قم بتحرير ملف page.tsx.",
      "ee848521": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`هل تبحث عن نقطة بداية أو المزيد من التعليمات؟ توجه إلى \${params['input']}  \${params['input2']} أو مركز \${params['input3']}  \${params['input4']}.\`;
  },
      "b75c70e0": "<image/> انشر الآن",
      "3b888a01": "شعار Vercel",
      "215fd18f": "التوثيق",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/ar/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`إنشاء تطبيق Next \${params['locale']}\`;
  },
      "a2995064": "تم إنشاؤه بواسطة create next app",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "05a79f06": ":",
      "6680ed51": "Logo de Next.js",
      "11f6ad8e": "x",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "Para comenzar, edite el archivo page.tsx.",
      "ee848521": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`¿Buscas un punto de partida o más instrucciones? Dirígete a \${params['input']}  \${params['input2']} o al centro de \${params['input3']}  \${params['input4']}.\`;
  },
      "b75c70e0": "<image/> Desplegar ahora",
      "3b888a01": "Logomarca de Vercel",
      "215fd18f": "Documentación",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/es/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Crear aplicación Next \${params['locale']}\`;
  },
      "a2995064": "Generado por create next app",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_a744357e6e46 1`] = `
"const catalog = {
    "b_a744357e6e46": {
      "05a79f06": ":",
      "6680ed51": "Next.js 标志",
      "11f6ad8e": "x",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "要开始使用，请编辑 page.tsx 文件。",
      "ee848521": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`寻找起点或更多说明？前往 \${params['input']}  \${params['input2']} 或 \${params['input3']}  \${params['input4']} 中心。\`;
  },
      "b75c70e0": "<image/> 立即部署",
      "3b888a01": "Vercel 品牌标识",
      "215fd18f": "文档",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/content/zh/entry:b_daacf15fefd1 1`] = `
"const catalog = {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`创建 Next 应用 \${params['locale']}\`;
  },
      "a2995064": "由 create next app 生成",
    },
  };
export default catalog;"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_a744357e6e46 1`] = `
"export default { id: "b_a744357e6e46", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_a744357e6e46": {
      "05a79f06": ":",
      "6680ed51": "Next.js logo",
      "11f6ad8e": "x",
      "f18b8fe7": "Zintl(i18n)",
      "6a0fa24d": "To get started, edit the page.tsx file.",
      "ee848521": (params) => {
    const { input, a1, input2, input3, a2, input4 } = params;
    return \`Looking for a starting point or more instructions? Head over to\${params['input']} \${params['input2']} or the\${params['input3']} \${params['input4']} center.\`;
  },
      "b75c70e0": "<image/> Deploy Now",
      "3b888a01": "Vercel logomark",
      "215fd18f": "Documentationn",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_a744357e6e46").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_a744357e6e46").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_a744357e6e46").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/manager/none/entry:b_daacf15fefd1 1`] = `
"export default { id: "b_daacf15fefd1", loader: (locale) => {
      switch(locale) { 
        case "en":
          return {
    "b_daacf15fefd1": {
      "f26ebb92": (params) => {
    const { locale } = params;
    return \`Create Next App \${params['locale']}\`;
  },
      "a2995064": "Generated by create next app",
    },
  };
                case "ar":
          return import("virtual:zintl/content/ar/entry:b_daacf15fefd1").then(m => m.default);
        case "es":
          return import("virtual:zintl/content/es/entry:b_daacf15fefd1").then(m => m.default);
        case "zh":
          return import("virtual:zintl/content/zh/entry:b_daacf15fefd1").then(m => m.default);
        default: return {};
      }
    } };"
`;

exports[`Example Proof: vinext-basic > should match Production snapshots > vinext-basic/prod-transforms/virtual:zintl/runtime/internal 1`] = `
"//#region src/runtime/store.ts
let storeStorage = null;
if (typeof window === "undefined" && typeof process !== "undefined") try {
	const asyncHooks = null;
	if (asyncHooks && asyncHooks.AsyncLocalStorage) storeStorage = new asyncHooks.AsyncLocalStorage();
} catch {}
var I18nStore = class {
	locale = "";
	catalogs = {};
	debug = typeof process !== "undefined" && process.env.ZINTL_DEBUG === "true" || false;
	pendingBoundaries = /* @__PURE__ */ new Set();
	listeners = /* @__PURE__ */ new Set();
	constructor() {
		if (typeof document !== "undefined" && document.documentElement) this.locale = document.documentElement.lang || "";
		if (!this.locale && typeof window !== "undefined") try {
			this.locale = localStorage.getItem("zintl-locale") || "";
		} catch {}
		if (!this.locale) try {
			if (storeStorage) {
				const active = storeStorage.getStore();
				if (active && active !== this) this.locale = active.locale;
			}
		} catch {}
	}
	subscribe(listener) {
		this.listeners.add(listener);
		return () => this.listeners.delete(listener);
	}
	notify() {
		this.listeners.forEach((l) => l());
	}
	addCatalogs(newCatalogs) {
		let changed = false;
		for (const [locale, boundaries] of Object.entries(newCatalogs)) {
			if (!this.catalogs[locale]) this.catalogs[locale] = {};
			for (const [boundaryId, messages] of Object.entries(boundaries)) {
				if (!this.catalogs[locale][boundaryId]) this.catalogs[locale][boundaryId] = {};
				for (const [key, value] of Object.entries(messages)) if (this.catalogs[locale][boundaryId][key] !== value) {
					this.catalogs[locale][boundaryId][key] = value;
					changed = true;
				}
			}
		}
		if (changed) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug("[Zintl] Catalogs updated:", Object.keys(newCatalogs).flatMap((l) => Object.keys(newCatalogs[l]).map((b) => \`\${l}/\${b}\`)));
			this.notify();
		}
	}
	async setLocale(locale) {
		if (!locale) return;
		if (typeof window !== "undefined") {
			if (window.__zintlApplyHtml) window.__zintlApplyHtml(locale);
			try {
				localStorage.setItem("zintl-locale", locale);
			} catch {}
		}
		if (this.locale === locale && Object.keys(this.catalogs[locale] || {}).length > 0) return;
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Switching to locale: \${locale}\`);
		this.locale = locale;
		const activePromises = [];
		for (const [boundaryId, loader] of globalRegistry.entries()) try {
			const result = loader(locale);
			const processResult = (res) => {
				if (!res) return;
				this.addCatalogs({ [locale]: res });
			};
			if (isThenable(result)) {
				this.pendingBoundaries.add(boundaryId);
				activePromises.push(result.then((res) => {
					processResult(res);
					this.pendingBoundaries.delete(boundaryId);
				}));
			} else processResult(result);
		} catch (err) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load catalog for boundary "\${boundaryId}" (\${locale})\`, err);
		}
		if (activePromises.length > 0) {
			await Promise.all(activePromises);
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		} else {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production" && this.debug) console.debug(\`[Zintl] Locale "\${locale}" hydrated.\`);
			this.notify();
		}
	}
	registerLoader(boundaryId, loader) {
		globalRegistry.set(boundaryId, loader);
		const result = loader(this.locale);
		const processResult = (res) => {
			if (!res) return;
			this.addCatalogs({ [this.locale]: res });
		};
		if (isThenable(result)) {
			this.pendingBoundaries.add(boundaryId);
			return result.then((res) => {
				processResult(res);
				this.pendingBoundaries.delete(boundaryId);
			});
		} else processResult(result);
	}
};
const globalRegistry = /* @__PURE__ */ new Map();
let currentInstance = new I18nStore();
function getActiveInstance() {
	if (storeStorage) {
		const store = storeStorage.getStore();
		if (store) return store;
	}
	return currentInstance;
}
function setActiveInstance(instance) {
	currentInstance = instance;
}
function runInRequestScope(urlOrReq, locales, defaultLocale, callback) {
	if (typeof window === "undefined" && storeStorage) {
		let locale = defaultLocale;
		if (urlOrReq) {
			let pathname = "";
			if (typeof urlOrReq === "string") pathname = urlOrReq;
			else if (typeof urlOrReq === "object") pathname = urlOrReq.url || urlOrReq.path || "";
			const parts = pathname.split("/").filter(Boolean);
			if (parts.length > 0 && locales.includes(parts[0])) locale = parts[0];
		}
		const store = new I18nStore();
		store.locale = locale;
		return storeStorage.run(store, () => {
			for (const [, loader] of globalRegistry.entries()) try {
				const result = loader(locale);
				const processResult = (res) => {
					if (!res) return;
					store.addCatalogs({ [locale]: res });
				};
				if (isThenable(result)) result.then(processResult);
				else processResult(result);
			} catch {}
			return callback();
		});
	}
	return callback();
}
function registerLoader(boundaryId, loader) {
	globalRegistry.set(boundaryId, loader);
	const instance = getActiveInstance();
	try {
		const result = loader(instance.locale);
		const processResult = (res) => {
			if (!res) return;
			instance.addCatalogs({ [instance.locale]: res });
		};
		if (isThenable(result)) return result.then((res) => {
			processResult(res);
		});
		else processResult(result);
	} catch (err) {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.error(\`[Zintl] Failed to load initial catalog for boundary "\${boundaryId}"\`, err);
	}
}
function unregisterLoader(boundaryId) {
	globalRegistry.delete(boundaryId);
}
function setLocale(locale) {
	return getActiveInstance().setLocale(locale);
}
function getLocale() {
	return getActiveInstance().locale;
}
function subscribe(listener) {
	return getActiveInstance().subscribe(listener);
}
function addCatalogs(catalogs) {
	return getActiveInstance().addCatalogs(catalogs);
}
function isThenable(obj) {
	return obj && typeof obj.then === "function";
}
//#endregion
//#region src/runtime/resolver.ts
function _t(key, params = {}, options) {
	const instance = getActiveInstance();
	const catalogs = instance.catalogs;
	const locale = instance.locale;
	const effectiveParams = options ? {
		...params,
		...options
	} : params;
	const mgr = effectiveParams._mgr;
	const boundaryId = mgr?.id;
	const targetBId = effectiveParams._bId || boundaryId;
	const boundaryCatalog = targetBId ? catalogs[locale]?.[targetBId] : void 0;
	let message = boundaryCatalog ? boundaryCatalog[key] : void 0;
	if (message === void 0) if (mgr) {
		instance.registerLoader(mgr.id, mgr.loader);
		const boundaryCatalogAfter = targetBId ? instance.catalogs[locale]?.[targetBId] : void 0;
		message = boundaryCatalogAfter ? boundaryCatalogAfter[key] : void 0;
		if (message === void 0) {
			if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" in boundary "\${boundaryId}". Triggering hydration...\`);
			return \`\`;
		}
	} else {
		if (typeof process !== "undefined" && process.env.NODE_ENV !== "production") console.warn(\`[Zintl] Missing key "\${key}" and no manager provided.\`);
		return \`\`;
	}
	if (typeof message === "function") return message(params);
	if (typeof message !== "string") return "";
	const { _mgr, _bId, _tags, ...restParams } = effectiveParams;
	let interpolated = interpolate(message, restParams);
	if (_tags && Array.isArray(_tags)) for (const entry of _tags) {
		interpolated = interpolated.replaceAll(\`<\${entry.alias}/>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias} />\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`<\${entry.alias}>\`, entry.originalOpen);
		interpolated = interpolated.replaceAll(\`</\${entry.alias}>\`, \`</\${entry.tagName}>\`);
	}
	return interpolated;
}
function interpolate(message, params) {
	if (message === null || message === void 0) return "";
	return String(message).replace(/\\{(\\w+)\\}/g, (match, key) => {
		return params[key]?.toString() ?? match;
	});
}
//#endregion
//#region src/runtime/registry.ts
/**
* A helper for the Zintl compiler to register a boundary loader.
* This is designed to be called with a minimal footprint in the transformed source.
*/
function registerZintlLoader(boundaryId, loader) {
	return registerLoader(boundaryId, loader);
}
//#endregion
//#region src/runtime/internal.ts
async function zintl(locale) {
	const activeLocale = locale || (typeof document !== "undefined" ? document.documentElement.lang : "");
	if (activeLocale) await setLocale(activeLocale);
}
/**
* Loads and configures the i18n instance for a boundary.
* Registers loaders and merges new catalogs into the existing state.
*
* INTERNAL: Targeted by the compiler after zintl() macro expansion.
*/
async function loadI18nInstance(config = {}) {
	const store = new I18nStore();
	setActiveInstance(store);
	if (typeof globalThis !== "undefined") globalThis.__zintl_active = store;
	try {
		if (config.debug !== void 0) store.debug = config.debug;
		if (config.locale) store.locale = config.locale;
		if (config.catalogs) store.addCatalogs(config.catalogs);
		const promises = [];
		if (config.loaders) for (const [boundaryId, loader] of Object.entries(config.loaders)) {
			const res = registerLoader(boundaryId, loader);
			if (res && typeof res.then === "function") promises.push(res);
		}
		if (config.locale) promises.push(store.setLocale(config.locale));
		if (promises.length > 0) await Promise.all(promises);
	} finally {}
	return {
		locale: store.locale,
		get debug() {
			return store.debug;
		},
		set debug(value) {
			store.debug = value;
		},
		setLocale: (l) => store.setLocale(l),
		subscribe: (cb) => store.subscribe(cb),
		t: (key, params) => {
			const prev = getActiveInstance();
			setActiveInstance(store);
			try {
				return _t(key, params);
			} finally {
				setActiveInstance(prev);
			}
		}
	};
}
//#endregion
export { _t, _t as t, addCatalogs, getLocale, loadI18nInstance, registerLoader, registerZintlLoader, runInRequestScope, setLocale, subscribe, unregisterLoader as unregisterZintlLoader, zintl };"
`;
